backend/deploy/terraform/security.tf
resource "aws_security_group" "quattys_sg" {
  name        = "quattys_sg"
  description = "quattys security group"
  vpc_id      = aws_vpc.quattys_vpc.id
}

resource "aws_security_group_rule" "sgr_pub_out" {
  from_port         = 0
  protocol          = "-1"
  security_group_id = aws_security_group.quattys_sg.id
  to_port           = 0
  type              = "egress"
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "srg_http_in" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  security_group_id = aws_security_group.quattys_sg.id
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "srg_ssh_in" {
  from_port         = 22
  protocol          = "tcp"
  security_group_id = aws_security_group.quattys_sg.id
  to_port           = 22
  type              = "ingress"
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "srg_http_keycloak" {
  type              = "ingress"
  from_port         = 8080
  to_port           = 8080
  protocol          = "tcp"
  security_group_id = aws_security_group.quattys_sg.id
  cidr_blocks       = ["0.0.0.0/0"]
}


resource "aws_key_pair" "quattys_key" {
  key_name   = "quattys_key"
  public_key = file("~/.ssh/quattys_key.pub")
}
